<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".View.CreateFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/create_fragment"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/editext_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/insira_o_id"
        android:inputType="number"
        android:autofillHints="@string/insira_o_id" />

    <EditText
        android:id="@+id/editext_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/insira_o_userid"
        android:autofillHints="@string/insira_o_userid" />

    <EditText
        android:id="@+id/editext_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/insira_o_titulo"
        android:inputType="textCapSentences"
        android:autofillHints="@string/insira_o_titulo" />

    <EditText
        android:id="@+id/editext_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/insira_o_texto"
        android:inputType="textCapSentences"
        android:autofillHints="@string/insira_o_texto" />

    <Button
        android:id="@+id/button_post"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/postar"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/resultado_post"
        android:text="@string/resposta"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:text="Resultado" />

</LinearLayout>