<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".View.DeleteFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/delete_fragment" />

    <EditText
        android:id="@+id/editext_id_fragment_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/insira_o_id"
        android:inputType="number"
        android:autofillHints="@string/insira_o_id" />

    <Button
        android:id="@+id/bt_delete_fragment"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:text="@string/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_resposta_delete"
        android:text="@string/resposta"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>